--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@ input::placeholder {
   color: #a5a5a5;
 }
 
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+
 body {
   margin: 0;
   height: 100%;
